--- a/styles.css
+++ b/styles.css
@@ -82,6 +82,7 @@
 #content {
     margin: 0 auto;
     width: 1000px;
+    height: 234px;
 }
 
 footer {
@@ -93,17 +94,17 @@ footer {
     font-family: 'Helvetica Neue';
   }
   
-  footer spam {
+footer spam {
     font-weight: 600;
-  }
+}
 
-  ul {
+ul {
     padding: 20px 0 20px 0;
     width: 100%;
     margin: auto;
 }
 
-  ul > li {
+ul > li {
     display: inline-block;
 }
 
@@ -119,4 +120,8 @@ li:last-child {
 li p {
     margin: 0;
     padding: 0;
+}
+
+.hidden {
+    display: none;
 }
