--- a/styles.css
+++ b/styles.css
@@ -103,8 +103,8 @@ ul > li {
     display: inline-block;
     color: #72747a;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-    width: 125px;
-    height: 135px;
+    width: 147px;
+    height: 150px;
     background-color: white;
 }
 
@@ -128,18 +128,18 @@ li p {
 }
 
 .imageCard p {
-    font-family: 'Sue Ellen Francisco', cursive;
+    font-family: 'Arial';
     margin: 0;
     padding: 0;
-    font-size: 19px;
+    font-size: 14px;
     position: relative;
-    top: 3px;
+    top: 24px;
     left: 0px;
-    font-weight: 500;
+    font-weight: 800;
+    color: black;
 }
 
 .image-border {
-    /* border: 1px solid #aba7a9; */
     width: 100px;
     height: 100px;    
     margin: 0 auto;
